Fix T80770: UV Image Editor: Display Texture Paint UVs Not Working

When developing the image draw engine I wasn't aware of this option. But
now it is back.